--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=sistema-consultas
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sistema_consultas
+spring.datasource.url=jdbc:mysql://localhost:3306/sistema_consultas?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
